tests/whiley/valid/test_762.wyal
define f_requires_0(int[] x, int i) is:
    |x| > 0


assert "precondition not satisfied":
    forall(int[] arr):
        if:
            arr == [1, 2, 3]
        then:
            f_requires_0(arr, 1)


