tests/whiley/invalid/test_106.wyal
define f_requires_0(int[] ls) is:
    forall(int i):
        ((0 <= i) && (i < |ls|)) ==> (ls[i] > 0)


assert "precondition not satisfied":
    if:
        true
    then:
        f_requires_0([0, 1, 2, 3])


